[package]
name = "speedy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
colored = "2.0.0"
console_engine = "2.6.0"
directories = "5.0.0"
rodio = "0.17.1"
ron = "0.8.0"
serde = { version = "1.0.160", features = ["derive"] }
signal-hook = "0.3.15"
