[package]
name = "speedy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
clap = { version = "4.2.5", features = ["derive"] }
colored = "2.0.0"
console_engine = "2.6.0"
directories = "5.0.0"
regex = "1.8.1"
rodio = "0.17.1"
ron = "0.8.0"
serde = { version = "1.0.160", features = ["derive"] }
signal-hook = "0.3.15"
toml = "0.7.4"
